--- a/_posts/2024-11-01-old-54.md
+++ b/_posts/2024-11-01-old-54.md
@@ -5,14 +5,14 @@ categories: [writeup, webhacking.kr]
 tags: [web, misc]
 ---
 ## Intro
-![문제 설명](assets\img\writeup\webhacking.kr\old-54\recon.png)
+![문제 설명](assets/img/writeup/webhacking.kr/old-54/recon.png)
 
 Password를 한글자씩 보여준다.
 
 빠른 동체시력으로 `flag`로 시작한다는 것을 보았다.
 
 ## Analysis
-![문제 분석](assets\img\writeup\webhacking.kr\old-54\analysis.png)
+![문제 분석](assets/img/writeup/webhacking.kr/old-54/analysis.png)
 
 Burp Suite을 사용해서 응답을 하나씩 보자.  
 파라미터를 1씩 증가시키면서 나온 응답값을 화면에 출력해준다.  
