--- a/_posts/2024-11-01-old-15.md
+++ b/_posts/2024-11-01-old-15.md
@@ -5,12 +5,12 @@ categories: [writeup, webhacking.kr]
 tags: [web, misc]
 ---
 ## Intro
-![문제 설명](assets\img\writeup\webhacking.kr\old-15\recon.png)
+![문제 설명](assets/img/writeup/webhacking.kr/old-15/recon.png)
 
 경고창이 뜨며, 메인 페이지로 리다이렉트된다.
 
 ## Analysis
-![문제 분석](assets\img\writeup\webhacking.kr\old-15\analysis.png)
+![문제 분석](assets/img/writeup/webhacking.kr/old-15/analysis.png)
 
 Burp Suite을 사용해서 서버의 응답을 살펴보자.
 
