--- a/_posts/2024-11-01-old-26.md
+++ b/_posts/2024-11-01-old-26.md
@@ -2,52 +2,31 @@
 title: ["[Webhacking.kr] old-26"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, misc, php]
+tags: [web, urlencoding, php]
 ---
 ## Intro
 ![문제 설명](assets/img/writeup/webhacking.kr/old-26/recon.png)
 
-`ip` 값이 `127.0.0.1`이 되면 문제를 풀 수 있다.
+`id`가 `admin`과 일치해야 한다.
 
 ## Analysis
 
-`extract($_SERVER);`는 `$_SERVER` 배열의 모든 키-값 쌍을 지역 변수로 생성한다.  
-* 클라이언트/요청 관련 변수
-  * $REMOTE_ADDR     : 클라이언트 IP 주소
-  * $REMOTE_PORT     : 클라이언트 포트
-  * $HTTP_USER_AGENT : 브라우저/클라이언트 정보
-  * $HTTP_ACCEPT     : Accept 헤더
-  * $HTTP_ACCEPT_LANGUAGE : 선호 언어
-  * $HTTP_ACCEPT_ENCODING : 지원하는 인코딩
-  * $HTTP_COOKIE     : 쿠키 정보
-  * $HTTP_HOST       : 요청된 호스트 이름  
-  
-* 서버 관련 변수
-  * $SERVER_NAME     : 서버의 호스트명
-  * $SERVER_ADDR     : 서버의 IP 주소
-  * $SERVER_PORT     : 서버가 사용하는 포트
-  * $SERVER_PROTOCOL : 프로토콜 (예: HTTP/1.1)
-  * $SERVER_SOFTWARE : 서버 소프트웨어 정보  
-  
-* 요청 경로 관련 변수
-  * $REQUEST_METHOD  :  HTTP 메소드 (GET, POST 등)
-  * $REQUEST_URI     : 요청된 URI
-  * $QUERY_STRING    :  URL의 쿼리스트링
-  * $SCRIPT_NAME     : 현재 스크립트의 경로
-  * $SCRIPT_FILENAME : 스크립트의 절대 경로
-  * $PHP_SELF        : 현재 실행 중인 스크립트 이름
+`preg_match("/admin/",$_GET['id'])`  
+`$_GET['id']`는 PHP에서 URL 파라미터를 통해 전달된 데이터를 받는 방법이다.  
+파라미터는 URL을 기준으로 `?` 이후에 시작되며, `parameter=value`형식이고, `&`로 구분된다.  
+즉, preg_match 함수는 `id` 파라미터 값이 `admin`을 포함하는 지를 검사한다.  
 
-```php
-  extract($_SERVER);
-  extract($_COOKIE);
-  $ip = $REMOTE_ADDR;
-```
-쿠키명이 `$REMOTE_ADDR`인 쿠키를 만든다면, `extract($COOKIE)`로 `$REMOTE_ADDR`을 덮을 수 있다.  
+이후에 해당 변수에 id를 urldecode한 값을 저장한다.  
 
 ## Payload
-php replace 로직을 잘 생각해보면,  
-`10.270.12.00.12.00.12.1` 값을 넣으면 replace를 거쳐 `127.0.0.1`이 된다.
+간단히 더블 인코딩을 하면 된다.  
+
+입력값으로 `%2561%2564%256d%2569%256e`을 준다면,  
+브라우저가 자동으로 첫번째 urldecode를 수행한다.  
+따라서, `%61%64%6d%69%6e`이 된다.
+
+이후에, php의 urldecode함수 실행으로 `admin`이 된다.
 
 ```
-document.cookie = "REMOTE_ADDR=10.270.12.00.12.00.12.1"
+/?id=%2561%2564%256d%2569%256e
 ```
