--- a/_posts/2024-11-01-old-24.md
+++ b/_posts/2024-11-01-old-24.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-24"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, misc, php]
+tags: [web, replace, php]
 ---
 ## Intro
 ![문제 설명](assets/img/writeup/webhacking.kr/old-24/recon.png)
@@ -10,7 +10,6 @@ tags: [web, misc, php]
 `ip` 값이 `127.0.0.1`이 되면 문제를 풀 수 있다.
 
 ## Analysis
-![문제 분석](assets/img/writeup/webhacking.kr/old-54/analysis.png)
 
 `extract($_SERVER);`는 `$_SERVER` 배열의 모든 키-값 쌍을 지역 변수로 생성한다.  
 * 클라이언트/요청 관련 변수
