--- a/_posts/2024-11-01-old-07.md
+++ b/_posts/2024-11-01-old-07.md
@@ -45,14 +45,14 @@ elseif($data[0]==2){
 
 ## Analysis
 
-```
+```sql
 select lv from chall7 where lv=($go)
 ```
 
-`2`, `-`, `+`, `from`, `_`, `=`, `\s`, `*`, `/` 는 사용하지 못한다.  
+`2`, `-`, `+`, `from`, `_`, `=`, `\s`, `*`, `/` 는 사용할 수 없다.  
 
 입력값을 `1^3`을 준다면 쿼리가 아래와 같이 완성된다.  
-```
+```sql
 select lv from chall7 where lv=(1^3)
 ```  
 `1 XOR 3`은 `2`이므로, 쉽게 결과가 나올 것이라고 생각했는데
@@ -61,7 +61,7 @@ select lv from chall7 where lv=(1^3)
 혹시 `^`가 필터링 되거나 문자열로 인식이 되나 싶어서 다른 입력값을 생각해보았다.  
 
 입력값을 `0)or(lv>1`을 준다면 쿼리가 아래와 같이 완성된다.  
-```
+```sql
 select lv from chall7 where lv=(0)or(lv>1)
 ```  
 하지만 마찬가지로 `query error`라는 응답이 왔다.  
@@ -77,6 +77,6 @@ union select문을 사용해서 결과에 2를 넣을 수 있다.
 
 쿼리는 아래와 같이 완성된다.  
 
-```
+```sql
 select lv from chall7 where lv=0)union(select(1^3))
 ```
