--- a/_posts/2024-11-01-old-07.md
+++ b/_posts/2024-11-01-old-07.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-07"]
+title: ["[Webhacking.kr] old-07 (sqli - 30)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, sqli, mysql]
