--- a/_posts/2024-11-01-old-02.md
+++ b/_posts/2024-11-01-old-02.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-02"]
+title: ["[Webhacking.kr] old-02 (sqli - 50)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, sqli, blackbox, blind sqli]
