--- a/_posts/2024-11-01-old-03.md
+++ b/_posts/2024-11-01-old-03.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-03"]
+title: ["[Webhacking.kr] old-03 (sqli - 35)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, sqli, blackbox]
