--- a/_posts/2024-11-01-old-13.md
+++ b/_posts/2024-11-01-old-13.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-13"]
+title: ["[Webhacking.kr] old-13 (sqli - 100)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, blind sqli, mysql, blackbox]
