--- a/_posts/2024-11-01-old-24.md
+++ b/_posts/2024-11-01-old-24.md
@@ -1,8 +1,8 @@
 ---
-title: ["[Webhacking.kr] old-24"]
+title: ["[Webhacking.kr] old-24 (misc - 10)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, replace, php]
+tags: [web, misc, replace, php]
 ---
 ## Intro
 ![문제 설명](assets/img/writeup/webhacking.kr/old-24/recon.png)
