--- a/_posts/2024-11-01-old-25.md
+++ b/_posts/2024-11-01-old-25.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-25"]
+title: ["[Webhacking.kr] old-25 (php - 15)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, php, wrapper]
