--- a/_posts/2024-11-01-old-26.md
+++ b/_posts/2024-11-01-old-26.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-26"]
+title: ["[Webhacking.kr] old-26 (misc - 10)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, urlencoding, php]
