--- a/_posts/2024-11-01-old-28.md
+++ b/_posts/2024-11-01-old-28.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-28"]
+title: ["[Webhacking.kr] old-28 (php - 50)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, urlencoding, php]
