--- a/_posts/2024-11-01-old-18.md
+++ b/_posts/2024-11-01-old-18.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-18 (sqli - 10)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, sqli, php, mysql]
+tags: [web, sqli]
 ---
 ## Intro
 ![문제 설명](assets/img/writeup/webhacking.kr/old-18/recon.png)
