--- a/_posts/2024-11-01-old-21.md
+++ b/_posts/2024-11-01-old-21.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-21 (sqli - 25)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, blind sqli, binary search, mysql, blackbox]
+tags: [web, sqli, blind sqli, binary search, blackbox]
 ---
 ## Intro
 
