--- a/_posts/2024-11-01-old-45.md
+++ b/_posts/2024-11-01-old-45.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-45 (sqli - 55)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, sqli, euc-kr, mysql]
+tags: [web, sqli, euc-kr]
 ---
 
 ```php
