--- a/_posts/2024-11-01-old-50.md
+++ b/_posts/2024-11-01-old-50.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-50 (sqli - 45)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, sqli, mysql]
+tags: [web, sqli]
 ---
 
 ```php
