--- a/_posts/2024-11-01-old-55.md
+++ b/_posts/2024-11-01-old-55.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-55 (sqli - 40)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, sqli, blind sqli0000]
+tags: [web, sqli, blind sqli]
 ---
 
 ```php
