--- a/_posts/2024-11-01-old-25.md
+++ b/_posts/2024-11-01-old-25.md
@@ -1,8 +1,8 @@
 ---
-title: ["[Webhacking.kr] old-25 (php - 15)"]
+title: ["[Webhacking.kr] old-25 (lfi - 15)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, php, wrapper]
+tags: [web, lfi, php wrapper]
 ---
 ## Intro
 ![문제 설명](assets/img/writeup/webhacking.kr/old-25/recon.png)
