--- a/_posts/2024-11-01-old-43-revenge.md
+++ b/_posts/2024-11-01-old-43-revenge.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] old-43 RevengE (file upload - 150)"]
+title: ["[Webhacking.kr] old-43 RevengE😈 (file upload - 150)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, file upload]
