--- a/_posts/2024-11-01-old-18.md
+++ b/_posts/2024-11-01-old-18.md
@@ -14,13 +14,13 @@ tags: [web, sqli]
 `preg_match("/ |\/|\(|\)|\||&|select|from|0x/i",$_GET['no'])`  
 SQL 인젝션을 방지하기 위한 필터링이다.  
 이렇게 SQL 구문이 필터링되어 있으면, 대부분 SQLi 문제라고 보면 된다.  
-`&nbsp;`, `/`, `(`, `)`, `|`, `&`, `select`, `from`, `0x`를 필터링하며, 대소문자 구분을 하지 않는다.  
+` `, `/`, `(`, `)`, `|`, `&`, `select`, `from`, `0x`를 필터링하며, 대소문자 구분을 하지 않는다.  
 
 `select id from chall18 where id='guest' and no=$_GET[no]`  
 타겟 쿼리는 다음과 같으므로,  
 `select id from chall18 where id='guest' and no=2 or no=2`로 쿼리를 바꾸면 된다.  
 
-하지만, `&nbsp;`(%20)이 필터링 된다.  
+하지만, ` `(%20)이 필터링 된다.  
 
 [No Space (%20) - bypass using whitespace alternatives](https://book.hacktricks.xyz/pentesting-web/sql-injection)  
 ```
