--- a/_posts/2024-11-01-old-40.md
+++ b/_posts/2024-11-01-old-40.md
@@ -11,7 +11,7 @@ tags: [web, sqli, blind sqli, binary search, blackbox]
 
 ## Analysis
 
-`no`, `id,` `pw` 세 파라미터 중, `no`만 인젝션이 동작하는 것으로 보인다.  
+`no`, `id`, `pw` 세 파라미터 중, `no`만 인젝션이 동작하는 것으로 보인다.  
 ```
 ?no=1%0a%7c%7c%0a1%23
 ```  
@@ -20,7 +20,7 @@ tags: [web, sqli, blind sqli, binary search, blackbox]
 만약 문자열이 필터링된다면, `access denied` 응답이 온다.  
 
 여러 구문들을 테스트한 결과,  
-`select`, `or`, ` `, `ascii` 등이 필터링 된다.  
+`select`, `or`, ` `, `ascii` 등이 필터링 된다.  
 
 ```
 ?no=0||no=2#
