--- a/_posts/2024-11-01-old-52.md
+++ b/_posts/2024-11-01-old-52.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] old-52 (ssrf - 40)"]
 date: 2024-11-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, ssrf, sqli]
+tags: [web, ssrf, sqli, crlf injection]
 ---
 
 ```
