--- a/_posts/2024-12-01-CHILD.md
+++ b/_posts/2024-12-01-CHILD.md
@@ -2,7 +2,7 @@
 title: ["[Webhacking.kr] CHILD (xss - 150)"]
 date: 2024-12-01 09:00:00 +0900
 categories: [writeup, webhacking.kr]
-tags: [web, xss, csp bypass]
+tags: [web, xss, csp bypass, bypass using jsonp]
 ---
 
 XSS 문제이다.  
