--- a/_posts/2024-10-14-snake.md
+++ b/_posts/2024-10-14-snake.md
@@ -7,7 +7,8 @@ tags: [reversing, modifying binary]
 
 ![](assets/img/writeup/ctf/snake_writeup/gM8CeYMosSTACrqGD2RSIMspKPgYiBdkjl849awKSNw=.png)
 
-스네이크 게임이다.
+스네이크 게임이다.  
+<a href="/assets/bin/ctf/snake/snake" download>다운로드</a>
 
 뭔가를 조작해서 점수를 달성해야할 것으로 보인다.
 
