--- a/_posts/2024-10-14-sole.md
+++ b/_posts/2024-10-14-sole.md
@@ -1,5 +1,5 @@
 ---
-title: ["[CyberSpace CTF 2024] snake"]
+title: ["[CyberSpace CTF 2024] sole"]
 date: 2024-10-14 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, z3]
@@ -10,8 +10,6 @@ tags: [reversing, z3]
 ![](assets/img/writeup/ctf/sole_writeup/f6gJ8EVXe0SWAswSqqh14EEWUESqd1qOF11OQ4IvzsY=.png)
 
 올바른 flag를 입력해야한다.
-
-
 
 ![](assets/img/writeup/ctf/sole_writeup/YEksulyS2NCPakOVluCnIQsiwLTWwvcuYk1ua-9VCXw=.png)
 
