--- a/_posts/2024-10-18-x8.md
+++ b/_posts/2024-10-18-x8.md
@@ -2,7 +2,7 @@
 title: ["[TFCCTF 2024] x8"]
 date: 2024-10-18 09:00:00 +0900
 categories: [writeup, ctf]
-tags: [reversing, rust]
+tags: [reversing, rust, vm]
 ---
 <a href="/assets/bin/ctf/x8/x8.bin" download>x8.bin Download</a>  
 <a href="/assets/bin/ctf/x8/program.bin" download>program.bin Download</a>  
