--- a/_posts/2024-10-09-duckbin.md
+++ b/_posts/2024-10-09-duckbin.md
@@ -32,7 +32,7 @@ GooseDesktop.exe.를 실행할때 이런 경고창이 나왔다.
 
 ![](assets/img/writeup/ctf/duckbin_writeup/3C1nWA51ozjSNtLvOVoL-nAfeI1LxuH6j992O8mjzBI=.png)
 
-각각을 dnsspy로 열어보니, VM이라는 부분이 추가되어 있었다. 이 부분을 분석하면 되겠다.
+각각을 dnspy로 열어보니, VM이라는 부분이 추가되어 있었다. 이 부분을 분석하면 되겠다.
 
 ![](assets/img/writeup/ctf/duckbin_writeup/KIdCOgNzcm_3ACSJnBSZA64yGrlFP3ImkHKt0g76Xh8=.png)
 
