--- a/_posts/2024-10-09-ping-pong.md
+++ b/_posts/2024-10-09-ping-pong.md
@@ -1,5 +1,5 @@
 ---
-title: ["[CCE 2023] ping-pong"]
+title: ["[CCE 2023 - rev] ping-pong"]
 date: 2024-10-09 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, exe, pyinstxtractor, pyc]
