--- a/_posts/2024-10-14-snake.md
+++ b/_posts/2024-10-14-snake.md
@@ -1,5 +1,5 @@
 ---
-title: ["[CyberSpace CTF 2024] snake"]
+title: ["[CyberSpace CTF 2024 - rev] snake"]
 date: 2024-10-14 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, modifying binary]
