--- a/_posts/2024-10-14-sole.md
+++ b/_posts/2024-10-14-sole.md
@@ -1,5 +1,5 @@
 ---
-title: ["[CyberSpace CTF 2024] sole"]
+title: ["[CyberSpace CTF 2024 - rev] sole"]
 date: 2024-10-14 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, z3]
