--- a/_posts/2024-10-16-login.md
+++ b/_posts/2024-10-16-login.md
@@ -1,5 +1,5 @@
 ---
-title: ["[CyberSpace CTF 2024] login"]
+title: ["[CyberSpace CTF 2024 - rev] login"]
 date: 2024-10-16 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, apkeasytool, blutter]
