--- a/_posts/2024-10-18-x8.md
+++ b/_posts/2024-10-18-x8.md
@@ -1,5 +1,5 @@
 ---
-title: ["[TFCCTF 2024] x8"]
+title: ["[TFCCTF 2024 - rev] x8"]
 date: 2024-10-18 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, rust, vm]
