--- a/_posts/2024-10-09-duckbin.md
+++ b/_posts/2024-10-09-duckbin.md
@@ -1,5 +1,5 @@
 ---
-title: ["[CCE 2023] duckbin"]
+title: ["[CCE 2023 - rev] duckbin"]
 date: 2024-10-09 09:00:00 +0900
 categories: [writeup, ctf]
 tags: [reversing, vm, dnspy, z3]
