uploading previous research posts

--- a/_posts/2025-03-26-HuntGPT.md
+++ b/_posts/2025-03-26-HuntGPT.md
@@ -2,7 +2,7 @@
 title: ["[Research] - Huntgpt: Integrating machine learning-based anomaly detection and explainable ai with large language models (llms)"]
 date: 2025-03-26 09:00:00 +0900
 last_modified_at: 2025-03-26 09:00:00 +0900
-categories: [research, crypto]
+categories: [research, anomaly detection]
 tags: [research]
 ---
 
