--- a/_posts/2025-07-07-LLMxCPG.md
+++ b/_posts/2025-07-07-LLMxCPG.md
@@ -2,8 +2,8 @@
 title: ["[Research] - LLMxCPG: Context-Aware Vulnerability Detection Through Code Property Graph-Guided Large Language Models"]
 date: 2025-07-07 09:00:00 +0900
 last_modified_at: 2025-07-07 09:00:00 +0900
-categories: [research, llm, vulnerability detection]
-tags: [research]
+categories: [research, vulnerability detection]
+tags: [research, llm]
 ---
 
 > Lekssays, A., Mouhcine, H., Tran, K., Yu, T., & Khalil, I. (2025). LLMxCPG: Context-Aware Vulnerability Detection Through Code Property Graph-Guided Large Language Models. arXiv preprint arXiv:2507.16585.
