--- a/_posts/2025-09-30-Heliodor.md
+++ b/_posts/2025-09-30-Heliodor.md
@@ -7,7 +7,7 @@ tags: [web, LFI, TOCTOU]
 ---
 
 ## 접근 포인트
-1. 입력 검증 오류  
+### 입력 검증 오류  
 
 ```javascript
 /* /app/heliodor/middlewares/expr.js */
@@ -41,7 +41,7 @@ function checkExprOne(req, res, next) {
 
 정규식에서 `*`를 `+`로 바꿨다면 공격이 불가했을 것이다.  
 
-2. TOCTOU (`fs.stat()` → `fs.createReadStream()`)  
+### TOCTOU (`fs.stat()` → `fs.createReadStream()`)  
 
 ```javascript
 /* /app/heliodor/routes/query.js */
