--- a/_posts/2025-09-30-Heliodor.md
+++ b/_posts/2025-09-30-Heliodor.md
@@ -3,7 +3,7 @@ title: ["[GoN Open Qual CTF- web] Heliodor"]
 date: 2025-09-30 09:00:00 +0900
 last_modified_at: 2025-09-30 09:00:00 +0900
 categories: [writeup, ctf]
-tags: [web, LFI, TOCTOU]
+tags: [web, LFI, toctou]
 ---
 
 ## 접근 포인트
