--- a/_posts/2025-10-15-IPv6_zone-id.md
+++ b/_posts/2025-10-15-IPv6_zone-id.md
@@ -27,9 +27,9 @@ Command Injection을 위해 `host` 파라미터에 `8.8.8.8;ls`과 같은 값을
 
 ## RFC 4007
 - 문제 배경: IPv6에는 `fe80::/10` 같은 link-local 주소가 존재하고, 한 호스트에는 여러 네트워크 인터페이스(예: eth0, wlan0)가 있을 수 있다. link-local 주소는 “어느 인터페이스에서 쓰느냐”가 의미를 가르기 때문에 **어느 인터페이스(또는 zone)**에서 보내야 하는지를 지정할 방법이 필요하다.
-- 해결(설계): RFC 4007(IPv6 Scoped Address Architecture)은 텍스트 표현에서 IPv6 주소 뒤에 %로 zone identifier(일종의 scope id / interface id)를 붙여서 특정 인터페이스를 명시하는 관습을 정의했다. 예: `fe80::1%eth0` (또는 숫자 인덱스 `fe80::1%3`). 이 표기는 주로 호스트 내부에서 의미가 있으며 네트워크 전송 수준의 패킷에는 별도로 인터페이스 인덱스가 전달된다다.
+- 해결(설계): RFC 4007(IPv6 Scoped Address Architecture)은 텍스트 표현에서 IPv6 주소 뒤에 `%`로 zone identifier(일종의 scope id / interface id)를 붙여서 특정 인터페이스를 명시하는 관습을 정의했다. 예: `fe80::1%eth0` (또는 숫자 인덱스 `fe80::1%3`). 이 표기는 주로 호스트 내부에서 의미가 있으며 네트워크 전송 수준의 패킷에는 별도로 인터페이스 인덱스가 전달된다.
 
-## python `ipaddress`모듈과 zone id
+## python ipaddress 모듈과 zone id
 `ipaddress.ip_address()`는 텍스트를 파싱해서 `IPv4Address`/`IPv6Address` 객체를 반환한다.  
 `ipaddress`는 zone id를 문자열의 일부로 인식해 `::1%zone` 같은 표현을 허용한다.  
 
